Allow for multi version support with Java 8